2016-06-10 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Updated and restructured for TYPO3 CMS 7 LTS, resolves #76575
	* Migrated language file to XLIFF, resolves #76577
	* Updated documentation, resolves #76579

2014-06-19 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected LaTeX setup for PDF rendering, resolves #59665
	* Released version 1.6.1, resolves #59668

2014-06-05 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 1.6.0, resolves #59320

2014-06-03 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Moved documentation to reStructuredText, resolves #58402
	* Verified compatibility with TYPO3 CMS 6.2, resolves #58401

2014-06-01 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Made all user functions and hooks into singletons, resolves #58400

2013-07-22 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Ensured compatibility with TYPO3 CMS 6.1, resolves #50311
	* Released version 1.5.0

2013-01-24 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 1.4.0

2012-01-18  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Ensured compatibility with TYPO3 CMS 6.0, resolves #44618
	* Switched RSS import example from tt_news to news, references #44618


2012-06-15  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 1.3.0
	* Updated the manual and the dependencies, resolves #38071

2012-05-29  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Updated XML import example to match new typo3.org RSS feed, resolves #37573

2011-03-08  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 1.2.0

2011-02-27  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added example for importing data in XML format, resolves #12043

2010-03-26  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released to TER as version 1.1.3

2010-03-23  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Updated screenshot to reflect UI changes

2010-01-19  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added example for usage of excludedOperations property
