@@ -63,7 +63,7 @@ in the dynamic configuration file):
 						'encoding' => 'latin1'
 					),
 					'data' => 'array',
-					'reference_uid' => 'code',
+					'referenceUid' => 'code',
 					'priority' => 10,
 					'description' => 'Import of all company departments'
 				)
