@@ -44,7 +44,7 @@ fe\_users table:
 				'encoding' => 'utf8'
 			),
 			'data' => 'array',
-			'reference_uid' => 'tx_externalimporttut_code',
+			'referenceUid' => 'tx_externalimporttut_code',
 			'additional_fields' => 'last_name,first_name',
 			'priority' => 50,
 			'disabledOperations' => '',
@@ -61,7 +61,7 @@ fe\_users table:
 				'encoding' => 'utf8'
 			),
 			'data' => 'array',
-			'reference_uid' => 'tx_externalimporttut_code',
+			'referenceUid' => 'tx_externalimporttut_code',
 			'priority' => 60,
 			'disabledOperations' => 'insert,delete',
 			'description' => 'Import of holidays balance'
